load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "beast",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp", "include/boost/**/*.ipp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/asio",
        "@boost//libs/assert",
        "@boost//libs/core",
        "@boost//libs/throw_exception",
        "@boost//libs/optional",
        "@boost//libs/smart_ptr",
        "@boost//libs/type_traits",
        "@boost//libs/system",
        "@boost//libs/utility",
        "@boost//libs/mp11",
        "@boost//libs/static_assert",
        "@boost//libs/intrusive",
        "@boost//libs/logic",
        "@boost//libs/endian",
    ],
)
